[gd_scene load_steps=6 format=2]

[ext_resource path="res://controllers/PlayerLocalController.gd" type="Script" id=1]
[ext_resource path="res://lib/proc/proc_pool.gd" type="Script" id=2]
[ext_resource path="res://assets/kenney_crosshairpack/crosshairs_tilesheet_white.png" type="Texture" id=3]
[ext_resource path="res://lib/ConstrainedMouseFollower.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 95.0842

[node name="Player" type="Node2D"]
script = ExtResource( 1 )
proc_pool_path = NodePath("ProcPool")
projectile_pool_path = NodePath("Projectiles")

[node name="ProcPool" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ItemScanner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemScanner"]
shape = SubResource( 1 )

[node name="Projectiles" type="Node" parent="."]

[node name="MouseTransformDecoupler" type="Node" parent="."]

[node name="MouseWidget" type="Node2D" parent="MouseTransformDecoupler"]
script = ExtResource( 4 )
leader_path = NodePath("../..")

[node name="Icon" type="Sprite" parent="MouseTransformDecoupler/MouseWidget"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 207, 69, 64, 64 )

[connection signal="area_shape_entered" from="ItemScanner" to="." method="_on_ItemScanner_area_shape_changed"]
[connection signal="area_shape_exited" from="ItemScanner" to="." method="_on_ItemScanner_area_shape_changed"]
